Testing css link

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html>
 <head>
+    <meta charset='UTF-8'/>
+    <link rel=¨stylesheet¨ type="text/css" href="styles.css">
 
 </head>
 
 <body>
-    <center><h1 id = "title">Creep It Real</h1></center>
+    <center><h1>Creep It Real</h1></center>
 </body>
 
 </html>
