--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
     <meta charset='UTF-8'/>
-    <link rel=¨stylesheet¨ type="text/css" href="styles.css">
-
+    <link rel='stylesheet' href='styles.css'>
 </head>
 
 <body>
