--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta charset='UTF-8'/>
-    <link rel='stylesheet' type='text/css' href='styles.css'>
-
+    <link rel='stylesheet' href='styles.css'>
 </head>
 
 <body>
+    <script src="script.js"></script>
     <center><h1>Creep It Real</h1></center>
 </body>
 
