Updating booleans and adding comments

--- a/index.html
+++ b/index.html
@@ -14,19 +14,22 @@
     <!--Heading-->
     <h1 align = "center">Creep It Real</h1>
 
-    
+    <!--Loading avatar image-->
     <div><img id = "avatar" src="empty.png"></div>
 
+    <!--Buttons-->
     <div id = "Buttons">
-        <!--Buttons-->
+        <!--Child & adult buttons-->
         <button id="cbtn" onclick="chooseChild()">Child</button>
         <button id="abtn" onclick="chooseAdult()">Adult</button>
         <br>
     
+        <!--Group & single buttons-->
         <button id = "gbtn" onclick="chooseGroup()">Group</button>
         <button id = "sbtn" onclick="chooseSingle()">Single</button>
         <br>
 
+        <!--Animal, profession, media, and mythical buttons-->
         <button id = "animal" onclick="chooseAnimal()">Animal</button>
         <button id = "profession" onclick="chooseProfession()">Profession</button>
         <button id = "media" onclick="chooseMedia()">Media</button>
