--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <button id = "haircolor">Hair Color</button>
         </div> -->
 
+        <!--Generate answer button-->
         <br>
         <button id = "generate" onclick = "window.location.href='answer.html';">Generate</button>
     </div>
