--- a/answer.html
+++ b/answer.html
@@ -13,6 +13,7 @@
     <!--Heading-->
     <h1 align = "center">Creep It Real</h1>
 
+    <!--Refresh button to take back to index.html-->
     <button onclick = "window.location.href='index.html';">Refresh</button>
 </body>
 </html>
