--- a/answer.html
+++ b/answer.html
@@ -4,14 +4,18 @@
     <meta charset='UTF-8'/>
 
     <!--Linking css file-->
-    <link rel='stylesheet' href='styles.css'>
+    
 </head>
 <body>
     <!--Linking js file-->
-    <script src="script.js"></script>
+    
 
     <!--Heading-->
     <h1 align = "center">Creep It Real</h1>
+
+    <p align = "center">Try out</p>
+    <div><img id = "firstImage" src=""></div>
+    <div><img id = "secondImage" src=""></div>
 
     <!--Refresh button to take back to index.html-->
     <button onclick = "window.location.href='index.html';">Refresh</button>
